--- a/index.html
+++ b/index.html
@@ -39,27 +39,20 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">My First Post</h5>
+					  <h5 class="font-weight-bold card-title">Starting a new blog...</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 17, 2020</h6>
-					  <small class="card-text text-monospace">this is just a test</small>
+					  <small class="card-text text-monospace">I have decided to take some time to start a new blog. My goal of setting up this space is to allow me to conver topics that I find generally interesting and more importantly to give me a place to simply write things down.</small>
 					  <a href="http://theorize.co/post/my-first-post/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Testing a Post</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">September 22, 2019</h6>
-					  <small class="card-text text-monospace">This is just a test to see how these posts will work under a few different themes.</small>
-					  <a href="http://theorize.co/post/testing-a-post/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
 		</div>
 </section>
 <section class="container text-center mt-2">
+    <h5 class="font-weight-bold card-title">Books I am currently reading...</h5>
     <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=qf_sp_asin_til&ad_type=product_link&tracking_id=cstheorist-20&marketplace=amazon&region=US&placement=B075RR1XVG&asins=B075RR1XVG&linkId=8d7e7e17372fefe3f3e8788ef1e986d3&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=cstheorist-20&language=en_US&marketplace=amazon&region=US&placement=1942788762&asins=1942788762&linkId=f4fa29ae95f38c67c63a5a9ac0f63af9&show_border=true&link_opens_in_new_window=true"></iframe>
 </section>
 
       </div>
@@ -82,7 +75,7 @@ if (!doNotTrack) {
 }
 </script>
   
-
+  
 </footer>
 <div>
 </div>
