--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Keeping Systems Decoupled</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
+					  <small class="card-text text-monospace">A common problem I have been asked to solve on a variety of the systems I have worked on is how to move data between independent components (different monoliths, micro-services, databases, etc).</small>
+					  <a href="http://theorize.co/post/decoupling/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Starting a new blog...</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 17, 2020</h6>
 					  <small class="card-text text-monospace">I have decided to take some time to start a new blog. My goal of setting up this space is to allow me to conver topics that I find generally interesting and more importantly to give me a place to simply write things down.</small>
