--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Influence Change: Part1</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
+					  <small class="card-text text-monospace">Something I love doing is going into a new environment to learn. I have a fairly broad set of interests which helps but I love to approach every situation, even those that seem familiar, as an opportunity to walk away knowing something I hadn&rsquo;t known going in.</small>
+					  <a href="http://theorize.co/post/influencechangepart1/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Keeping Systems Decoupled</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
 					  <small class="card-text text-monospace">A common problem I have been asked to solve on a variety of the systems I have worked on is how to move data between independent components (different monoliths, micro-services, databases, etc).</small>
