--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
 			
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
+					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
+					  <a href="http://theorize.co/post/realtimenotrealfast/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Starting a new blog...</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 17, 2020</h6>
 					  <small class="card-text text-monospace">I have decided to take some time to start a new blog. My goal of setting up this space is to allow me to conver topics that I find generally interesting and more importantly to give me a place to simply write things down.</small>
