--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
 			
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 23, 2020</h6>
+					  <small class="card-text text-monospace">When building systems I have come to recognize that after some period of time (years) that the complexity of these systems increases significantly.</small>
+					  <a href="https://theorize.co/post/complexityovertime/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
 					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
