--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 			
 				<div class="bg-light card">
 					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
-					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
-					  <a href="https://theorize.co/post/realtimenotrealfast/" class="card-link">Read More...</a>
+					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 2</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
+					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
+					  <a href="https://theorize.co/post/writing/complexityovertime2/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
