--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Influence Change: Part1</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
-					  <small class="card-text text-monospace">Something I love doing is going into a new environment to learn. I have a fairly broad set of interests which helps but I love to approach every situation, even those that seem familiar, as an opportunity to walk away knowing something I hadn&rsquo;t known going in.</small>
-					  <a href="https://theorize.co/post/influencechangepart1/" class="card-link">Read More...</a>
+					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 3</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 25, 2020</h6>
+					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
+					  <a href="https://theorize.co/post/complexityovertime3/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
 				<div class="bg-light card">
 					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Keeping Systems Decoupled</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
-					  <small class="card-text text-monospace">A common problem I have been asked to solve on a variety of the systems I have worked on is how to move data between independent components (different monoliths, micro-services, databases, etc).</small>
-					  <a href="https://theorize.co/post/decoupling/" class="card-link">Read More...</a>
+					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 2</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
+					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
+					  <a href="https://theorize.co/post/complexityovertime2/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
@@ -75,10 +75,10 @@
 			
 				<div class="bg-light card">
 					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 2</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
-					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
-					  <a href="https://theorize.co/post/writing/complexityovertime2/" class="card-link">Read More...</a>
+					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
+					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
+					  <a href="https://theorize.co/post/realtimenotrealfast/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
