--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">The Rule of 2AM</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 26, 2020</h6>
+					  <small class="card-text text-monospace">The rule of 2AM goes like this:
+ As a developer when you are about to submit your pull request ask yourself, will everyone on my team be able to understand what the logic I have just implemented does at 2AM within 15 minutes?</small>
+					  <a href="https://theorize.co/post/theruleof2am/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 3</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 25, 2020</h6>
 					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
@@ -70,15 +80,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 23, 2020</h6>
 					  <small class="card-text text-monospace">When building systems I have come to recognize that after some period of time (years) that the complexity of these systems increases significantly.</small>
 					  <a href="https://theorize.co/post/complexityovertime/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
-					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
-					  <a href="https://theorize.co/post/realtimenotrealfast/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
