--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Some thoughts on Negative Caching</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 27, 2020</h6>
+					  <small class="card-text text-monospace">Over the past few years I have been working on APIs that are public facing. The implication is that I have little control over what messages may hit a service that I build.</small>
+					  <a href="https://theorize.co/post/negativecaching/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">The Rule of 2AM</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 26, 2020</h6>
 					  <small class="card-text text-monospace">The rule of 2AM goes like this:
@@ -71,15 +80,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
 					  <small class="card-text text-monospace">While back in school I spent time studying the human visual system and worked on attempting to model that system in software through the creation of various Neural Networks.</small>
 					  <a href="https://theorize.co/post/visuallearningtechniques/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 23, 2020</h6>
-					  <small class="card-text text-monospace">When building systems I have come to recognize that after some period of time (years) that the complexity of these systems increases significantly.</small>
-					  <a href="https://theorize.co/post/complexityovertime/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
