--- a/index.html
+++ b/index.html
@@ -83,6 +83,51 @@
 					</div>
 			  </div>
 			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 23, 2020</h6>
+					  <small class="card-text text-monospace">When building systems I have come to recognize that after some period of time (years) that the complexity of these systems increases significantly.</small>
+					  <a href="https://theorize.co/post/complexityovertime/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
+					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
+					  <a href="https://theorize.co/post/realtimenotrealfast/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Influence Change: Part1</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
+					  <small class="card-text text-monospace">Something I love doing is going into a new environment to learn. I have a fairly broad set of interests which helps but I love to approach every situation, even those that seem familiar, as an opportunity to walk away knowing something I hadn&rsquo;t known going in.</small>
+					  <a href="https://theorize.co/post/influencechangepart1/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Keeping Systems Decoupled</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
+					  <small class="card-text text-monospace">A common problem I have been asked to solve on a variety of the systems I have worked on is how to move data between independent components (different monoliths, micro-services, databases, etc).</small>
+					  <a href="https://theorize.co/post/decoupling/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Starting a new blog...</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 17, 2020</h6>
+					  <small class="card-text text-monospace">I have decided to take some time to start a new blog. My goal of setting up this space is to allow me to conver topics that I find generally interesting and more importantly to give me a place to simply write things down.</small>
+					  <a href="https://theorize.co/post/my-first-post/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
 		</div>
 </section>
 <section class="container text-center mt-2">
