--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Are you there? More than just availability...</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 28, 2020</h6>
+					  <small class="card-text text-monospace">Technology is constantly changing all around us. Could you imagine making a phone call today and missing every other word? What is the voice of the individual on the other end was delayed by 10 seconds?</small>
+					  <a href="https://theorize.co/post/areyouthere/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Some thoughts on Negative Caching</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 27, 2020</h6>
 					  <small class="card-text text-monospace">Over the past few years I have been working on APIs that are public facing. The implication is that I have little control over what messages may hit a service that I build.</small>
@@ -89,42 +98,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 23, 2020</h6>
 					  <small class="card-text text-monospace">When building systems I have come to recognize that after some period of time (years) that the complexity of these systems increases significantly.</small>
 					  <a href="https://theorize.co/post/complexityovertime/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Real Time != Real Fast</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 21, 2020</h6>
-					  <small class="card-text text-monospace">Ok, a pet peeve of mine and something that if you ever want to get in a heated debate with me about - just tell me you need some data in real time and presume that I have any clue what you mean.</small>
-					  <a href="https://theorize.co/post/realtimenotrealfast/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Influence Change: Part1</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
-					  <small class="card-text text-monospace">Something I love doing is going into a new environment to learn. I have a fairly broad set of interests which helps but I love to approach every situation, even those that seem familiar, as an opportunity to walk away knowing something I hadn&rsquo;t known going in.</small>
-					  <a href="https://theorize.co/post/influencechangepart1/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Keeping Systems Decoupled</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 20, 2020</h6>
-					  <small class="card-text text-monospace">A common problem I have been asked to solve on a variety of the systems I have worked on is how to move data between independent components (different monoliths, micro-services, databases, etc).</small>
-					  <a href="https://theorize.co/post/decoupling/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Starting a new blog...</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 17, 2020</h6>
-					  <small class="card-text text-monospace">I have decided to take some time to start a new blog. My goal of setting up this space is to allow me to conver topics that I find generally interesting and more importantly to give me a place to simply write things down.</small>
-					  <a href="https://theorize.co/post/my-first-post/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
