--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Building for failure in a distributed world - taking dependencies robustly</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 30, 2020</h6>
+					  <small class="card-text text-monospace">I have been working on systems that customers rely on 24x7 my entire career. A common question that comes up in almost every software design centers around how do we build a piece of software to achieve &ldquo;100%&rdquo; availability?</small>
+					  <a href="https://theorize.co/post/buildingforfailure/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Are you there? More than just availability...</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 28, 2020</h6>
 					  <small class="card-text text-monospace">Technology is constantly changing all around us. Could you imagine making a phone call today and missing every other word? What is the voice of the individual on the other end was delayed by 10 seconds?</small>
@@ -89,15 +98,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
 					  <small class="card-text text-monospace">While back in school I spent time studying the human visual system and worked on attempting to model that system in software through the creation of various Neural Networks.</small>
 					  <a href="https://theorize.co/post/visuallearningtechniques/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 23, 2020</h6>
-					  <small class="card-text text-monospace">When building systems I have come to recognize that after some period of time (years) that the complexity of these systems increases significantly.</small>
-					  <a href="https://theorize.co/post/complexityovertime/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
