--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">What is a Monolith</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 31, 2020</h6>
+					  <small class="card-text text-monospace">I have worked on a large number of projects of all different shapes and sizes. Since I have worked on many existing code bases a common question I will be asked is: &ldquo;can we break down our monolith&rdquo;.</small>
+					  <a href="https://theorize.co/post/whatisamonolith/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Building for failure in a distributed world - taking dependencies robustly</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 30, 2020</h6>
 					  <small class="card-text text-monospace">I have been working on systems that customers rely on 24x7 my entire career. A common question that comes up in almost every software design centers around how do we build a piece of software to achieve &ldquo;100%&rdquo; availability?</small>
@@ -89,15 +98,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
 					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
 					  <a href="https://theorize.co/post/complexityovertime2/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Learning in layers</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
-					  <small class="card-text text-monospace">While back in school I spent time studying the human visual system and worked on attempting to model that system in software through the creation of various Neural Networks.</small>
-					  <a href="https://theorize.co/post/visuallearningtechniques/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
