--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Dealing with FUD and making the tough choices</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 7, 2020</h6>
+					  <small class="card-text text-monospace">Getting large changes rolled out within an organization or with customers is often not easy. One particular set of changes are those that fundamentally change the way something that is already deployed functions.</small>
+					  <a href="https://theorize.co/post/dealingwithfud/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">What is a Monolith</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 31, 2020</h6>
 					  <small class="card-text text-monospace">I have worked on a large number of projects of all different shapes and sizes. Since I have worked on many existing code bases a common question I will be asked is: &ldquo;can we break down our monolith&rdquo;.</small>
@@ -89,15 +98,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 25, 2020</h6>
 					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
 					  <a href="https://theorize.co/post/complexityovertime3/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 2</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 24, 2020</h6>
-					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
-					  <a href="https://theorize.co/post/complexityovertime2/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
