--- a/index.html
+++ b/index.html
@@ -39,8 +39,17 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Dealing with FUD and making the tough choices</h5>
+					  <h5 class="font-weight-bold card-title">Learning from Failures or Successes?</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 7, 2020</h6>
+					  <small class="card-text text-monospace">As I, like many, are learning how to change their work style (and work life balance) while functioning from home, helping to school my kids at home, it got me thinking a little bit about what to optimize, favor, and focus on.</small>
+					  <a href="https://theorize.co/post/learnsuccessorfailure/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Dealing with FUD and making the tough choices</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 6, 2020</h6>
 					  <small class="card-text text-monospace">Getting large changes rolled out within an organization or with customers is often not easy. One particular set of changes are those that fundamentally change the way something that is already deployed functions.</small>
 					  <a href="https://theorize.co/post/dealingwithfud/" class="card-link">Read More...</a>
 					</div>
@@ -89,15 +98,6 @@
 					  <small class="card-text text-monospace">The rule of 2AM goes like this:
  As a developer when you are about to submit your pull request ask yourself, will everyone on my team be able to understand what the logic I have just implemented does at 2AM within 15 minutes?</small>
 					  <a href="https://theorize.co/post/theruleof2am/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Minimizing complexity over the life of a system - Part 3</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 25, 2020</h6>
-					  <small class="card-text text-monospace">In my previous post I called out 3 areas that stood out to me as adding complexity over time to long lived systems and dug into the first of those points (using a technology without asking WHY it was the right tool).</small>
-					  <a href="https://theorize.co/post/complexityovertime3/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
