--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Maintaining our Technology Garden</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 21, 2020</h6>
+					  <small class="card-text text-monospace">I have worked in organizations of many different shapes and sizes. Some as small as just myself, in startups including tens of engineers and still others that have included tens of thousands of engineers.</small>
+					  <a href="https://theorize.co/post/consciousdeviation/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Learning from Failures or Successes?</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 7, 2020</h6>
 					  <small class="card-text text-monospace">As I, like many, are learning how to change their work style (and work life balance) while functioning from home, helping to school my kids at home, it got me thinking a little bit about what to optimize, favor, and focus on.</small>
@@ -88,16 +97,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 27, 2020</h6>
 					  <small class="card-text text-monospace">Over the past few years I have been working on APIs that are public facing. The implication is that I have little control over what messages may hit a service that I build.</small>
 					  <a href="https://theorize.co/post/negativecaching/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">The Rule of 2AM</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 26, 2020</h6>
-					  <small class="card-text text-monospace">The rule of 2AM goes like this:
- As a developer when you are about to submit your pull request ask yourself, will everyone on my team be able to understand what the logic I have just implemented does at 2AM within 15 minutes?</small>
-					  <a href="https://theorize.co/post/theruleof2am/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
