--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Driving Ownership</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 23, 2020</h6>
+					  <small class="card-text text-monospace">By the end of this article I hope that as the reader you agree with me on the connection between the following three terms:</small>
+					  <a href="https://theorize.co/post/drivingownership/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Maintaining our Technology Garden</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 21, 2020</h6>
 					  <small class="card-text text-monospace">I have worked in organizations of many different shapes and sizes. Some as small as just myself, in startups including tens of engineers and still others that have included tens of thousands of engineers.</small>
@@ -88,15 +97,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 28, 2020</h6>
 					  <small class="card-text text-monospace">Technology is constantly changing all around us. Could you imagine making a phone call today and missing every other word? What is the voice of the individual on the other end was delayed by 10 seconds?</small>
 					  <a href="https://theorize.co/post/areyouthere/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Some thoughts on Negative Caching</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 27, 2020</h6>
-					  <small class="card-text text-monospace">Over the past few years I have been working on APIs that are public facing. The implication is that I have little control over what messages may hit a service that I build.</small>
-					  <a href="https://theorize.co/post/negativecaching/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
