New post on innovation.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Innovating outside the box</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 10, 2020</h6>
+					  <small class="card-text text-monospace">It has been a while since I last posted. There are a number of reasons for this including recently making the decision to take on a new role as CTO at Twilio.</small>
+					  <a href="https://theorize.co/post/innovatingoutsidethebox/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Driving Ownership</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 23, 2020</h6>
 					  <small class="card-text text-monospace">By the end of this article I hope that as the reader you agree with me on the connection between the following three terms:</small>
@@ -88,15 +97,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 30, 2020</h6>
 					  <small class="card-text text-monospace">I have been working on systems that customers rely on 24x7 my entire career. A common question that comes up in almost every software design centers around how do we build a piece of software to achieve &ldquo;100%&rdquo; availability?</small>
 					  <a href="https://theorize.co/post/buildingforfailure/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Are you there? More than just availability...</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 28, 2020</h6>
-					  <small class="card-text text-monospace">Technology is constantly changing all around us. Could you imagine making a phone call today and missing every other word? What is the voice of the individual on the other end was delayed by 10 seconds?</small>
-					  <a href="https://theorize.co/post/areyouthere/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
