Service Readiness Post.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">A Strategy and Proposal for Assessing Cloud Service Readiness</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 11, 2020</h6>
+					  <small class="card-text text-monospace">Throughout my career I have been held accountable for the maturity and quality of code deployed into production. When I was first coming out of school this was fairly easy to assess (did the code I write ever cause a problem and when it did learn from it).</small>
+					  <a href="https://theorize.co/post/servicereadiness/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">Innovating outside the box</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 10, 2020</h6>
 					  <small class="card-text text-monospace">It has been a while since I last posted. There are a number of reasons for this including recently making the decision to take on a new role as CTO at Twilio.</small>
@@ -88,15 +97,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 31, 2020</h6>
 					  <small class="card-text text-monospace">I have worked on a large number of projects of all different shapes and sizes. Since I have worked on many existing code bases a common question I will be asked is: &ldquo;can we break down our monolith&rdquo;.</small>
 					  <a href="https://theorize.co/post/whatisamonolith/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Building for failure in a distributed world - taking dependencies robustly</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 30, 2020</h6>
-					  <small class="card-text text-monospace">I have been working on systems that customers rely on 24x7 my entire career. A common question that comes up in almost every software design centers around how do we build a piece of software to achieve &ldquo;100%&rdquo; availability?</small>
-					  <a href="https://theorize.co/post/buildingforfailure/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
