Post on architect role

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     
 				<div class="bg-light card">
 					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Getting Strategic - One of many roles of an Architect</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 21, 2020</h6>
+					  <small class="card-text text-monospace">Since taking on my new role a number of folks have been pinging me to say congratulations (and thank you for that!</small>
+					  <a href="https://theorize.co/post/gettingstrategic/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
 					  <h5 class="font-weight-bold card-title">A Strategy and Proposal for Assessing Cloud Service Readiness</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 11, 2020</h6>
 					  <small class="card-text text-monospace">Throughout my career I have been held accountable for the maturity and quality of code deployed into production. When I was first coming out of school this was fairly easy to assess (did the code I write ever cause a problem and when it did learn from it).</small>
@@ -88,15 +97,6 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 6, 2020</h6>
 					  <small class="card-text text-monospace">Getting large changes rolled out within an organization or with customers is often not easy. One particular set of changes are those that fundamentally change the way something that is already deployed functions.</small>
 					  <a href="https://theorize.co/post/dealingwithfud/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">What is a Monolith</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">May 31, 2020</h6>
-					  <small class="card-text text-monospace">I have worked on a large number of projects of all different shapes and sizes. Since I have worked on many existing code bases a common question I will be asked is: &ldquo;can we break down our monolith&rdquo;.</small>
-					  <a href="https://theorize.co/post/whatisamonolith/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
