--- a/index.html
+++ b/index.html
@@ -51,15 +51,6 @@
 					  <h5 class="font-weight-bold card-title">Getting Strategic - One of many roles of an Architect</h5>
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 21, 2020</h6>
 					  <small class="card-text text-monospace">Since taking on my new role a number of folks have been pinging me to say congratulations (and thank you for that!</small>
-					  <a href="https://theorize.co/post/writing/gettingstrategic/" class="card-link">Read More...</a>
-					</div>
-			  </div>
-			
-				<div class="bg-light card">
-					<div class="card-body">
-					  <h5 class="font-weight-bold card-title">Getting Strategic - One of many roles of an Architect</h5>
-					  <h6 class="text-monospace card-subtitle mb-2 text-muted">October 21, 2020</h6>
-					  <small class="card-text text-monospace">Since taking on my new role a number of folks have been pinging me to say congratulations (and thank you for that!</small>
 					  <a href="https://theorize.co/post/gettingstrategic/" class="card-link">Read More...</a>
 					</div>
 			  </div>
@@ -97,6 +88,15 @@
 					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 21, 2020</h6>
 					  <small class="card-text text-monospace">I have worked in organizations of many different shapes and sizes. Some as small as just myself, in startups including tens of engineers and still others that have included tens of thousands of engineers.</small>
 					  <a href="https://theorize.co/post/consciousdeviation/" class="card-link">Read More...</a>
+					</div>
+			  </div>
+			
+				<div class="bg-light card">
+					<div class="card-body">
+					  <h5 class="font-weight-bold card-title">Learning from Failures or Successes?</h5>
+					  <h6 class="text-monospace card-subtitle mb-2 text-muted">June 7, 2020</h6>
+					  <small class="card-text text-monospace">As I, like many, are learning how to change their work style (and work life balance) while functioning from home, helping to school my kids at home, it got me thinking a little bit about what to optimize, favor, and focus on.</small>
+					  <a href="https://theorize.co/post/learnsuccessorfailure/" class="card-link">Read More...</a>
 					</div>
 			  </div>
 			
